--- a/parksnap_front/src/components/WeatherPage.css
+++ b/parksnap_front/src/components/WeatherPage.css
@@ -1,5 +1,5 @@
 .weather-container{
-    height: 70vh;
+    height: 71vh;
     background-color: #0A0322;
 }
 
